--- a/examples/src/main/res/values/strings.xml
+++ b/examples/src/main/res/values/strings.xml
@@ -135,5 +135,7 @@
     <string name="send_user_feedback" translatable="false">Send User Feedback</string>
     <string name="simple_mapbox_navigation_clear_routes" translatable="false">CLEAR ROUTES</string>
     <string name="simple_mapbox_navigation_add_original_route" translatable="false">ADD ORIGINAL ROUTE</string>
+    <string name="history_failed_to_load_item" translatable="false">History failed to load item</string>
+    <string name="history_failed_to_load_list">Failed to load list</string>
 
 </resources>
